fix(card/article): fix extra margin of tag chips

--- a/components/card/article/src/index.scss
+++ b/components/card/article/src/index.scss
@@ -27,7 +27,9 @@ $c-article-tag-types: () !default;
   }
 
   &-tag {
-    margin-bottom: 0;
+    &.sui-TagChip {
+      margin: 0;
+    }
   }
 
   &-comments {
